Decorator for Iterator failed 1s 100000 elements over ±10000 in 100000 buckets